--- a/config/people/kitchenplan.yml
+++ b/config/people/kitchenplan.yml
@@ -5,7 +5,7 @@ recipes:
         - osxdefaults::set_computer_name
 attributes:
     osxdefaults:
-        computername: MyComputerName
+        computername: KitchenplanTest
     homebrewalt:
         apps:
             - git-extras
