--- a/config/default.yml
+++ b/config/default.yml
@@ -10,6 +10,7 @@ attributes:
             - git
         cask_apps:
             - google-chrome
+            - atom
     nodejs:
         apps:
             - bower
