--- a/config/groups/development.yml
+++ b/config/groups/development.yml
@@ -10,3 +10,6 @@ attributes:
           - atom
           - kaleidoscope
           - alfred
+          - google-chrome
+          - virtualbox
+          - vagrant
