--- a/config/groups/development.yml
+++ b/config/groups/development.yml
@@ -15,3 +15,4 @@ attributes:
           - vagrant
           - chefdk #Install Chef and tools such as knife and kitchen
           - totalterminal
+          - appcode
